[package]
name = "pcg"
version = "3.0.1"
authors = ["Afnan Enayet <afnan.enayet@gmail.com>"]
edition = "2018"
description = "A port of the PCG random number generation library"
repository = "https://github.com/afnanenayet/pcg-rs"
readme = "docs/README.md"
license = "MIT"

[dependencies]
rand_core = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []

[badges]
travis-ci = { repository = "afnanenayet/pcg-rs", branch = "master" }
maintenance = { status = "actively-developed" }
