[package]
name = "pcg"
version = "4.1.1-alpha.0"
authors = ["Afnan Enayet <afnan.enayet@gmail.com>"]
edition = "2018"
description = "A port of the PCG random number generation library"
repository = "https://github.com/afnanenayet/pcg-rs"
readme = "docs/README.md"
license = "MIT"

[dependencies]
rand_core = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.7"

[features]
default = ["std"]
std = []

[badges]
travis-ci = { repository = "afnanenayet/pcg-rs", branch = "master" }
maintenance = { status = "actively-developed" }
